@@ -18,6 +18,10 @@
 		<filename>index.html</filename>
 		<folder>tmpl</folder>
 	</files>
+	<languages>
+		<language tag="en-GB">en-GB.mod_latest.ini</language>
+		<language tag="en-GB">en-GB.mod_latest.sys.ini</language>	
+	</languages>
 	<help key="JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_LATEST" />
 	<config>
 		<fields name="params">
